TGR-564: upstream fix for timestamps not shown in loaded messages / vertical spacing improvement

--- a/tiger-proxy/src/main/resources/rbel.css
+++ b/tiger-proxy/src/main/resources/rbel.css
@@ -67,6 +67,18 @@
     margin-left: 0.5rem;
 }
 
+
+h1.title{
+    font-size: 2rem;
+}
+h2.title{
+    font-size: 1.5rem;
+}
+.title {
+    font-size: 1.5rem;
+    margin-bottom: .5rem;
+}
+
 pre {
     color: #fa4 !important;
     background-color: #444 !important;
